fix(ASSETS-6851): The selected state of the action button does not have a sufficient contrast ratio (#251)

--- a/coral-component-button/src/styles/index.styl
+++ b/coral-component-button/src/styles/index.styl
@@ -27,3 +27,7 @@ button[is="coral-button"] {
 .coral--light ._coral-ActionButton.is-disabled ._coral-Icon {
     color: var(--spectrum-light-global-color-gray-700);
 }
+
+.coral--light ._coral-ActionButton--quiet.is-selected.focus-ring {
+    background-color: var(--spectrum-light-textfield-background-color-accessibility);
+}
