--- a/coral-component-textfield/src/styles/index.styl
+++ b/coral-component-textfield/src/styles/index.styl
@@ -42,5 +42,5 @@
   color: var(--spectrum-lightest-global-color-gray-700);
 }
 .coral--light ._coral-Textfield {
-  border-color: rgb(158, 158, 158);
+  border-color: var(--spectrum-light-textfield-border-color-accessibility);
 }
